--- a/public/index.html
+++ b/public/index.html
@@ -28,10 +28,11 @@
       rel="stylesheet"
       href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
     />
-    <title>React App</title>
+    <title>Arduino App</title>
   </head>
   <body>
     <script src="/socket.io/socket.io.js" charset="utf-8"></script>
+    <script src="../src/App.js" charset="utf-8"></script>
     <script
       type="text/javascript"
       src="https://www.gstatic.com/charts/loader.js"
